# librg-utils-perl

./: AUTHORS  Build.PL  Build.PL.in  ChangeLog  Makefile  Makefile.am  Makefile.in  blast2saf.pl  blastpgp_to_saf.pl  configure  configure.ac  conv_hssp2saf.pl  copf.pl  dbSwiss  hssp_filter.pl  librg-utils-perl.spec  librg-utils-perl.spec.in  runNewPSIC.pl  safFilterRed.pl
RG/: Makefile.am  Makefile.in
RG/Utils/: Conv_hssp2saf.pm  Copf.pm  Hssp_filter.pm  Makefile.am  Makefile.in
debian/: changelog  control  copyright  rules
lib/RG/: Makefile.in
lib/RG/Utils/: Conv_hssp2saf.pm  Copf.pm  Hssp_filter.pm  Makefile.in
mat/: Makefile.am  Makefile.in
